--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
 baseURL = 'https://username.github.io/' # آدرس سایت خودتان را بزنید
 languageCode = 'fa-ir'
 title = 'سایت جدید من'
-theme = 'ananke' # نام قالبی که انتخاب می‌کنید
+#theme = 'ananke' # نام قالبی که انتخاب می‌کنید
